# card_scannner_ws

./: .gitignore  README.md  build_and_run.sh  install_dependencies.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/card_scanner/local/lib/python3.10/dist-packages/card_scanner/: card_scanner_node.py
install/card_scanner/local/lib/python3.10/dist-packages/card_scanner-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/card_scanner/share/ament_index/resource_index/package_run_dependencies/: card_scanner
install/card_scanner/share/ament_index/resource_index/parent_prefix_path/: card_scanner
install/card_scanner/share/card_scanner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/card_scanner/share/card_scanner/card_scanner/: __init__.py
install/card_scanner/share/card_scanner/cmake/: card_scannerConfig-version.cmake  card_scannerConfig.cmake
install/card_scanner/share/card_scanner/config/: params.yaml
install/card_scanner/share/card_scanner/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/card_scanner/share/card_scanner/launch/: card_scanner.launch.py
log/: latest_build
src/card_scanner/: CMakeLists.txt  package.xml
src/card_scanner/card_scanner/: card_scanner_node.py
src/card_scanner/config/: params.yaml
src/card_scanner/launch/: card_scanner.launch.py
