<?xml version="1.0"?>
<package format="3">
  <name>card_scanner</name>
  <version>1.0.0</version>
  <description>TurtleBot3 Burger playing card change detector</description>
  <maintainer email="yashchothani2280@example.com">yash</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>